// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCard is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props a null icon 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props accepts div props like style 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
  style="min-width:0"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props children 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiCard__children"
    >
      Child
    </div>
  </div>
</div>
`;

exports[`EuiCard props children with description 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
    <div
      class="euiCard__children"
    >
      Child
    </div>
  </div>
</div>
`;

exports[`EuiCard props display accent is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--accent euiPanel--noShadow euiPanel--noBorder euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display danger is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--danger euiPanel--noShadow euiPanel--noBorder euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display plain is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--noShadow euiPanel--noBorder euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display primary is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--primary euiPanel--noShadow euiPanel--noBorder euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display subdued is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display success is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--success euiPanel--noShadow euiPanel--noBorder euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display transparent is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props display warning is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--warning euiPanel--noShadow euiPanel--noBorder euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props footer 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <span>
      Footer
    </span>
  </div>
</div>
`;

exports[`EuiCard props horizontal 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--horizontal"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props href supports href as a link 1`] = `
<EuiCard
  description="There"
  href="#"
  title="Hoi"
>
  <EuiPanel
    className="euiCard euiCard--centerAligned euiCard--isClickable"
    element="div"
    hasShadow={true}
    onClick={[Function]}
  >
    <div
      className="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--isClickable euiCard euiCard--centerAligned euiCard--isClickable"
      onClick={[Function]}
    >
      <div
        className="euiCard__content"
      >
        <EuiTitle
          className="euiCard__title"
          id="generated-idTitle"
          size="s"
        >
          <span
            className="euiTitle euiTitle--small euiCard__title"
            id="generated-idTitle"
          >
            <a
              aria-describedby="generated-idDescription"
              className="euiCard__titleAnchor"
              href="#"
              rel="noreferrer"
            >
              Hoi
            </a>
          </span>
        </EuiTitle>
        <EuiText
          className="euiCard__description"
          id="generated-idDescription"
          size="s"
        >
          <div
            className="euiText euiText--small euiCard__description"
            id="generated-idDescription"
          >
            <p>
              There
            </p>
          </div>
        </EuiText>
      </div>
    </div>
  </EuiPanel>
</EuiCard>
`;

exports[`EuiCard props icon 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--hasIcon"
>
  <div
    class="euiCard__top"
  >
    <span
      class="myIconClass euiCard__icon"
      data-euiicon-type="apmApp"
    />
  </div>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props image 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__top"
  >
    <div
      class="euiCard__image"
    >
      <div>
        <img
          alt="Nature"
          src="https://source.unsplash.com/400x200/?Nature"
        />
      </div>
    </div>
  </div>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props isDisabled 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--subdued euiPanel--noShadow euiPanel--noBorder euiCard euiCard--centerAligned euiCard-isDisabled"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      <button
        aria-describedby=" generated-idDescription"
        class="euiCard__titleButton"
        disabled=""
      >
        Card title
      </button>
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize l is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize m is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize none is rendered 1`] = `
<div
  class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props paddingSize s is rendered 1`] = `
<div
  class="euiPanel euiPanel--paddingSmall euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props selectable 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--isClickable euiCard euiCard--centerAligned euiCard--isClickable euiCard--isSelectable euiCard--isSelectable--text"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
  <button
    aria-checked="false"
    aria-describedby="generated-idTitle generated-idDescription"
    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiCardSelect euiCardSelect--text"
    role="switch"
    type="button"
  >
    <span
      class="euiButtonContent euiButtonEmpty__content"
    >
      <span
        class="euiButtonEmpty__text"
      >
        Select
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiCard props textAlign 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--rightAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props titleElement 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <h4
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </h4>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiCard props titleSize 1`] = `
<div
  class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--xsmall euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Card description
      </p>
    </div>
  </div>
</div>
`;
